# ZTW

./: .editorconfig  .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  LICENSE  PRD.md  README.md  TASKS.md  bootstrap.sh  deny.toml  docker-compose.yml  package-lock.json  package.json
.claude/: launch.json
core/: Cargo.toml  README.md
core/examples/: capture_wgc.rs  connection_smoke.rs  dxgi_e2e.rs  dxgi_h264_selftest.rs  dxgi_loopback.rs  dxgi_source_probe.rs  e2e_control.rs  e2e_media.rs  e2e_relay.rs  e2e_session.rs  encode_smoke.rs  input_inject_smoke.rs  live_controller.rs  managed_host.rs  monitor_switch_smoke.rs  monitors_probe.rs  security_smoke.rs  signal_handshake.rs  srflx_smoke.rs  turn_smoke.rs  wake_smoke.rs
core/src/: blank.rs  capture.rs  clipboard.rs  connect.rs  connection.rs  crypto.rs  encode.rs  files.rs  identity.rs  input.rs  lib.rs  media.rs  net.rs  password.rs  relay.rs  session.rs  signal.rs  wol.rs
coturn/: turnserver.conf.template
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: autostart.rs  lib.rs  main.rs  portable.rs
docs/: architecture.md  deploy.md  dev-setup.md  licensing.md  packaging.md  stage4-secure-desktop.md
scripts/: pack-portable.mjs
server/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
server/prisma/: schema.prisma
server/scripts/: seed-e2e.ts  set-login.ts
server/src/: app.ts  config.ts  index.ts
server/src/auth/: guard.ts  passwords.test.ts  passwords.ts  secrets.test.ts  secrets.ts  tokens.test.ts  tokens.ts  totp.test.ts  totp.ts
server/src/db/: accounts.integration.test.ts  accounts.ts  audit.ts  client.ts  devices.integration.test.ts  devices.ts  groups.integration.test.ts  groups.ts
server/src/http/: routes.integration.test.ts  routes.ts
server/src/lib/: ids.test.ts  ids.ts  ratelimit.test.ts  ratelimit.ts  turn.test.ts  turn.ts
server/src/signaling/: protocol.ts  registry.test.ts  registry.ts
server/src/ws/: signaling.integration.test.ts  signaling.ts
server/test/: global-setup.ts  reset-each.ts
service/: Cargo.toml
service/src/: main.rs
ui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  api.ts  widgets.tsx
ui/src/platform/: index.ts  tauri.ts  web.ts
ui/src/screens/: AddressBook.tsx  Auth.tsx
web-wasm/: Cargo.toml
web-wasm/src/: lib.rs
