[package]
name = "zortilwatch-core"
description = "Спільне ядро ZortilWatch: захоплення, кодування, ввід, мережа, крипто."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]

# ── Чиста крипто/протокольна поверхня (wasm-safe; завжди доступна) ──
# crypto + session + media реюзає веб-клієнт через WASM, тож без нативних залежностей.
[dependencies]
# spake2 без default — getrandom вмикає лише фіча "native"; wasm передає власний RNG.
spake2 = { version = "0.4", default-features = false }
rand_core = { version = "0.6", default-features = false }
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
# AEAD для E2E-шифрування медіа сесійним ключем (поверх DTLS), RustCrypto, пермісивно.
# Без default — default тягне getrandom (для generate_nonce, якого не вживаємо: nonce лічильниковий),
# а він не збирається під wasm*-unknown. Лишаємо лише alloc (Vec-методи Aead).
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Нативна поверхня (мережа/ОС): за фічею "native" (default), поза wasm ──
# rust-crypto: чистий Rust DTLS (без NASM/C-тулчейну на Windows), пермісивно.
str0m = { version = "0.20", default-features = false, features = ["rust-crypto"], optional = true }
# STUN-клієнт для srflx (синхронний, працює на нашому сокеті).
stunclient = { version = "0.4", optional = true }
# CSPRNG (ОС) для одноразових паролів.
getrandom = { version = "0.2", optional = true }
# STUN/TURN кодек для TURN Allocate-клієнта (версії узгоджені зі stun_codec 0.4).
stun_codec = { version = "0.4", optional = true }
bytecodec = { version = "0.5", optional = true }
trackable = { version = "1", optional = true }
# Синхронний WebSocket-клієнт сигналінгу (ws://; TLS додамо для прод-wss окремо).
tungstenite = { version = "0.21", default-features = false, features = ["handshake"], optional = true }

[features]
default = ["native"]
# Повна нативна збірка (десктоп/керований): мережа, сигналінг, relay, ОС-захоплення, OsRng.
native = [
    "dep:str0m",
    "dep:stunclient",
    "dep:getrandom",
    "dep:stun_codec",
    "dep:bytecodec",
    "dep:trackable",
    "dep:tungstenite",
    "spake2/getrandom",
]

[target.'cfg(windows)'.dependencies]
# WGC-захоплення звичайного робочого стола; екран входу — DXGI-DDA на Етапі 4.
windows-capture = "2.0.0"
# Media Foundation для кодування H.264 (кодек ОС — без патентних роялті).
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    # Спільний буфер обміну (PRD 5.8).
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    # Безпека сесії (PRD 5.10): затемнення (вікно+GDI), автоблокування.
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Shutdown",
    # Wake-on-LAN (PRD 5.9): читання власного MAC для звіту серверу.
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    # DXGI Desktop Duplication (Етап 4 / Tier B): захоплення для керованого на
    # secure-desktop. Реюзає той самий BGRA8->H264-шлях, що й WGC.
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    # Перемикання input-desktop (Default<->Winlogon) для DXGI-джерела Tier B.
    "Win32_System_StationsAndDesktops",
] }

[dev-dependencies]
tempfile = "3"
