[package]
name = "zortilwatch-desktop"
description = "Десктопна оболонка ZortilWatch (Tauri v2) для Windows."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
# Ядро ZortilWatch: оркестрація сесії (Controller/Managed).
zortilwatch-core = { path = "../../core" }
# Кадри H.264 у webview шлемо base64-рядком через Tauri Channel.
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
# Автозапуск через HKCU\…\Run — той самий windows-крейт, що в ядрі (без нової залежності).
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_Registry"] }
